--- a/frontend/src/Screen/HomeLoginScreen.css
+++ b/frontend/src/Screen/HomeLoginScreen.css
@@ -1,5 +1,5 @@
 .login {
-  height: 75vh;
+  height: 70vh;
   background: var(--bg-secondary);
   padding: 8.4rem 0;
 }
@@ -136,8 +136,12 @@
 }
 
 @media (max-width: 51em) {
+  .login {
+    height: 100vh;
+    padding: 6.8rem 0;
+  }
   .login__details-box {
-    max-width: 50rem;
+    max-width: 55rem;
 
     grid-template-columns: 1fr;
     row-gap: 4.8rem;
