--- a/frontend/src/Screen/HomeLoginScreen.css
+++ b/frontend/src/Screen/HomeLoginScreen.css
@@ -72,6 +72,7 @@
   font-weight: 700;
   background-color: var(--blue-color);
   border-radius: 5px;
+  cursor: pointer;
 }
 
 .btn--green {
@@ -137,8 +138,7 @@
 
 @media (max-width: 51em) {
   .login {
-    height: 100vh;
-    padding: 6.8rem 0;
+    height: auto;
   }
   .login__details-box {
     max-width: 55rem;
