--- a/frontend/src/Component/Register.css
+++ b/frontend/src/Component/Register.css
@@ -48,7 +48,12 @@
   gap: 1.2rem;
 }
 
-.register__form-group input {
+.register__form-group {
+  width: 100%;
+  position: relative;
+}
+
+.register__form-group input:not([type='radio']) {
   width: 100%;
   height: 3.8rem;
   border: 1px solid var(--bg-third);
@@ -70,11 +75,6 @@
 .gender__heading {
   font-size: 1.2rem;
   margin-bottom: 0.2rem;
-}
-
-.DOB,
-.gender {
-  width: 100%;
 }
 
 .DOB_grid,
