--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -53,3 +53,37 @@ a {
   font-size: 1.2rem;
   color: var(--green-color);
 }
+
+.verified {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+}
+
+.verified div {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  backface-visibility: hidden;
+}
+
+.verified_icon {
+  display: inline-block;
+  height: 50%;
+  animation: verifiedanimation 1s ease-out;
+}
+
+@keyframes verifiedanimation {
+  0% {
+    transform: scale(0);
+  }
+
+  50% {
+    transform: scale(0.5);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
